Fix HEIC upload issues and make project cards fully clickable
- Implemented robust HEIC conversion with multiple fallback methods
- Added server-side HEIC processing with heic-convert library
- Set 4MB file size limit for reliable uploads
- Made entire project cards clickable to redirect to contact page
- Preserved all existing functionality (buttons, links, etc.)
- Enhanced hover effects and user experience
- Removed error messages for seamless client experience
- Fixed image cropping issues for better display

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "browser-image-compression": "^2.0.2",
     "compression": "^1.8.1",
     "framer-motion": "^10.16.4",
     "heic2any": "^0.0.4",
