--- a/backend/package.json
+++ b/backend/package.json
@@ -13,24 +13,31 @@
     "prepare-deployment": "cd .. && chmod +x scripts/prepare-deployment.sh && ./scripts/prepare-deployment.sh"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.40.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "multer": "^1.4.5-lts.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "cloudinary": "^1.40.0",
+    "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
-    "helmet": "^7.0.0",
     "express-validator": "^7.0.1",
-    "winston": "^3.10.0",
-    "compression": "^1.7.4"
+    "heic-convert": "^2.1.0",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.34.4",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": ["construction", "api", "mongodb", "express"],
+  "keywords": [
+    "construction",
+    "api",
+    "mongodb",
+    "express"
+  ],
   "author": "Your Name",
   "license": "MIT"
 }
